# tecneterra_ros_rover

./: .gitignore  AgriRover_Safety_Mechanisms.docx  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  dynamics_log - copia.csv  dynamics_log.csv  dynamics_rtk.csv  navigator_diag.csv  navigator_diag_rv2.csv
android/AgriRoverGQC/: README.md  USER_MANUAL.md
android/AgriRoverGQC/app/: build.gradle.kts
android/AgriRoverGQC/app/src/androidTest/java/com/siyi/agrirover/: ExampleInstrumentedTest.kt
android/AgriRoverGQC/app/src/main/: AndroidManifest.xml
android/AgriRoverGQC/app/src/main/java/com/siyi/agrirover/: MainActivity.kt  RoverPositionManager.kt
android/AgriRoverGQC/app/src/main/res/drawable/: ic_battery.xml  ic_delete.xml  ic_folder.xml  ic_gauge.xml  ic_save.xml  ic_stop.xml  ic_upload.xml
android/AgriRoverGQC/app/src/main/res/layout/: activity_main.xml  dialog_machine_settings.xml
android/AgriRoverGQC/app/src/main/res/values/: colors.xml
android/AgriRoverGQC/app/src/main/res/values-night/: themes.xml
android/AgriRoverGQC/app/src/test/java/com/siyi/agrirover/: ExampleUnitTest.kt
android/TecneterraGCS/: README.md  TECHNICAL_DOCUMENTATION.md  settings.gradle.kts
android/TecneterraGCS/app/: build.gradle.kts
android/TecneterraGCS/app/src/main/: AndroidManifest.xml
android/TecneterraGCS/app/src/main/java/com/siyi/agrirover/: MainActivity.kt  RoverPositionManager.kt
android/TecneterraGCS/app/src/main/res/drawable/: bg_record_button.xml  ic_add.xml  ic_arrow_up.xml  ic_fiber_manual_record.xml  ic_folder_open.xml  ic_home.xml  ic_menu.xml  ic_play.xml  ic_record.xml  ic_remove.xml  ic_rover.xml  ic_thermostat.xml  ic_water_drop.xml
android/TecneterraGCS/app/src/main/res/layout/: activity_main.xml
android/TecneterraGCS/app/src/main/res/values/: strings.xml  themes.xml
android/TecneterraGCS/gradle/wrapper/: gradle-wrapper.properties
docs/: CONFIG_EDITOR.md
firmware/: CLAUDE.md
firmware/ppm_decoder/: CMakeLists.txt  main.cpp  ppm_rx.pio
firmware/rc_link_sx1278/master/: CMakeLists.txt  main.cpp  sbus_rx.pio  sx1278.h
firmware/rc_link_sx1278/slave/: CMakeLists.txt  main.cpp  ppm_tx.pio
missions/: _autosave.json  corridor.json  debug _log.json  debug_log.json  field_obstacles.obstacles.json  garden_fence.obstacles.json  garden_fence_out.obstacles.json  obstacles.json  smooth_watering.json  smooth_watering_obstacle.json  smooth_watering_slow.json  test_corridor.json
ros2_ws/: CLAUDE.md
ros2_ws/src/agri_rover_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/agri_rover_bringup/config/: rover1_params.yaml  rover2_params.yaml  rover3_params.yaml
ros2_ws/src/agri_rover_bringup/launch/: rosbridge.launch.py  rover1.launch.py  rover2.launch.py  rover3.launch.py  sim_harness.launch.py
ros2_ws/src/agri_rover_gps/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_gps/agri_rover_gps/: gps_driver.py
ros2_ws/src/agri_rover_gps/launch/: gps.launch.py
ros2_ws/src/agri_rover_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/agri_rover_interfaces/action/: FollowMission.action
ros2_ws/src/agri_rover_interfaces/msg/: MissionWaypoint.msg  RCInput.msg  RoverStatus.msg  SensorData.msg
ros2_ws/src/agri_rover_interfaces/srv/: ArmDisarm.srv  SetMode.srv
ros2_ws/src/agri_rover_mavlink/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_mavlink/agri_rover_mavlink/: mavlink_bridge.py
ros2_ws/src/agri_rover_mavlink/launch/: mavlink.launch.py
ros2_ws/src/agri_rover_navigator/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_navigator/agri_rover_navigator/: corridor.py  grid_planner.py  lane_graph.py  navigator.py
ros2_ws/src/agri_rover_navigator/config/: navigator_params.yaml
ros2_ws/src/agri_rover_navigator/launch/: navigator.launch.py
ros2_ws/src/agri_rover_rp2040/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_rp2040/agri_rover_rp2040/: rp2040_bridge.py
ros2_ws/src/agri_rover_rp2040/launch/: rp2040.launch.py
ros2_ws/src/agri_rover_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_sensors/agri_rover_sensors/: sensor_node.py
ros2_ws/src/agri_rover_sensors/launch/: sensors.launch.py
ros2_ws/src/agri_rover_simulator/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_simulator/agri_rover_simulator/: diff_drive.py  sim_harness_node.py  simulator_node.py
ros2_ws/src/agri_rover_simulator/config/: simulator_params.yaml
ros2_ws/src/agri_rover_simulator/launch/: simulator.launch.py
ros2_ws/src/agri_rover_video/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_rover_video/agri_rover_video/: video_streamer.py
ros2_ws/src/agri_rover_video/config/: gstreamer.yaml
ros2_ws/src/agri_rover_video/launch/: video.launch.py  video_pipeline.launch.py
tools/: .env.rtk.example  analyze_can_log.py  can_dashboard.py  config_editor.py  corridor.py  corridor_test.html  dynamics_collector.py  dynamics_ros2_collector.py  gen_safety_doc.py  mission_data_collector.py  mission_planner.py  mission_uploader.py  monitor.py  nmea_wifi_rx.py  open_sessions.bat  rosseta_CAN_IDs.md  rtk_analysis.py  rtk_forwarder.py  sim_navigator.py  simulator.py  start_planner.bat  start_rover1.sh  start_rover1_sim.sh  start_rover2.sh  start_rover2_sim.sh  start_sim_harness.sh  test_rp2040_master.py  udp_rv2_test.py  udp_sim_test.py  upload_mission.py
tools/mission_logs/: garden_fence_out.obstacles.json
