cmake_minimum_required(VERSION 3.8)
project(agri_rover_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/RCInput.msg"
  "msg/RoverStatus.msg"
  "msg/SensorData.msg"
  "msg/MissionWaypoint.msg"
  "srv/SetMode.srv"
  "srv/ArmDisarm.srv"
  "action/FollowMission.action"
  DEPENDENCIES std_msgs geometry_msgs sensor_msgs builtin_interfaces
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
