<?xml version="1.0"?>
<package format="3">
  <name>agri_rover_navigator</name>
  <version>0.1.0</version>
  <description>Autonomous mission follower — pure pursuit controller for waypoint navigation</description>
  <maintainer email="dev@agrirover.com">AgriRover</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>agri_rover_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
